add modlues and converter bug repair

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -56,6 +56,7 @@ nasnet_large.tflite
 model_emotions_0727_nosoftmax.tflite
 inception_resnet_v2.tflite
 ml_ocr_latin.tflite
+hiai_PoseEstimation_Pcm.tflite
 hiai_ssd_mobilenetv2_object.tflite
 hiai_cv_focusShootOCRModel_02.tflite
 hiai_cv_poseEstimation.tflite
