fix bug and add two tflite models
set quant_type default value

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -78,9 +78,9 @@ hiai_cv_labelDetectorModel_v2.tflite
 #hiai_cv_labelDetectorModel_v3.tflite
 hiai_cv_labelDetectorModel_v4.tflite
 hiai_dress_detect.tflite
-#hiai_frozen_inference_graph.tflite
+hiai_frozen_inference_graph.tflite
 hiai_ghostnet.tflite
 hiai_iMaxDN_RGB.tflite
 hiai_iMaxSR_RGB.tflite
 hiai_label_and_video.tflite
-#hiai_lm_inference_graph.tflite
+hiai_lm_inference_graph.tflite
