--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -16,7 +16,7 @@ tracking
 mtk_isface
 mtk_landmark
 mtk_pose_tuku
-mtk_face_recognition_v1
+# mtk_face_recognition_v1
 mtk_2012_ATLANTA_10class_20190614_v41
 mtk_detect-deeper-halfdeeper-mbv1-lastearlySSD-shortcut-400-400_nopostprocess_simplified
 detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified
@@ -28,16 +28,16 @@ ml_hand_detection
 ml_ocr_cn
 ml_ocr_sfz_detect_0325
 ml_hardware_liveness
-ml_liveness_detect_landmark
+# ml_liveness_detect_landmark
 ml_face_contour
 2012_ATLANTA_1class_20190621_v4.x_nomean
 ml_handpose
 ml_ocr_sfz_add_final_0325
-ml_hardware_pose
+# ml_hardware_pose
 ml_bank_recog
 2012_ATLANTA_10class_20190131_v4.0
 mnet
-recognition
+# recognition
 ml_face_landmark
 model_hebing_3branch
 hiai_cv_focusShootOCRModel_07
@@ -50,7 +50,7 @@ hiai_cpu_face_hat
 hiai_video_seg
 hiai_semantic_seg
 hiai_human_seg
-hiai_face_recognition_1
+# hiai_face_recognition_1
 hiai_cpu_face_detect
 detect-mbv1-shortcut-400-400_nopostprocess_simplified
 detect_mbv1_640_480_nopostprocess_simplified
