--- a/mindspore/lite/tools/converter/parser/caffe/CMakeLists.txt
+++ b/mindspore/lite/tools/converter/parser/caffe/CMakeLists.txt
@@ -28,4 +28,5 @@ add_library(caffe_parser_mid OBJECT
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_inspector.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_interp_parser.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_permute_parser.cc
-        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_tile_parser.cc)
+        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_tile_parser.cc
+        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_tanh_parser.cc)
