Add Convertor function for windows enviroment

--- a/mindspore/lite/CMakeLists.txt
+++ b/mindspore/lite/CMakeLists.txt
@@ -25,6 +25,9 @@ if (PLATFORM_ARM64)
     set(COMPONENT_NAME runtime-arm64-${PROCESS_UNIT})
 elseif (PLATFORM_ARM32)
     set(COMPONENT_NAME runtime-arm32-${PROCESS_UNIT})
+elseif (WIN32)
+    set(PARSER_NAME libconverter-parser-win32-${PROCESS_UNIT})
+    set(COMPONENT_NAME converter-win32-${PROCESS_UNIT})
 else ()
     set(COMPONENT_NAME convert-ubuntu)
 endif()
