--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -33,7 +33,7 @@ ml_face_contour
 2012_ATLANTA_1class_20190621_v4.x_nomean
 ml_handpose
 ml_ocr_sfz_add_final_0325
-# ml_hardware_pose
+ml_hardware_pose
 ml_bank_recog
 2012_ATLANTA_10class_20190131_v4.0
 mnet
