--- a/mindspore/lite/tools/time_profile/CMakeLists.txt
+++ b/mindspore/lite/tools/time_profile/CMakeLists.txt
@@ -19,8 +19,8 @@ endif()
 
 if (PLATFORM_ARM32 OR PLATFORM_ARM64)
     install(TARGETS timeprofile
-            RUNTIME DESTINATION ${MAIN_DIR}/time_profile COMPONENT ${COMPONENT_NAME})
+            RUNTIME DESTINATION ${MAIN_DIR}-${COMPONENT_NAME}/time_profile COMPONENT ${COMPONENT_NAME})
 else()
     install(TARGETS timeprofile
-            RUNTIME DESTINATION ${MAIN_DIR}/time_profile COMPONENT ${RUN_X86_COMPONENT_NAME})
+            RUNTIME DESTINATION ${MAIN_DIR}-${RUN_X86_COMPONENT_NAME}/time_profile COMPONENT ${RUN_X86_COMPONENT_NAME})
 endif()
