--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -72,6 +72,8 @@ ml_object_detect.tflite
 hiai_cpu_face_emotion.tflite
 hiai_cpu_face_gazing.tflite
 hiai_cpu_face_headpose.tflite
+hiai_humanDetection.tflite
+hiai_cv_focusShootOCRModel_08.tflite
 ml_face_openclose.tflite
 hiai_face_model_npu.tflite
 hiai_ctpn_feature_map.tflite
