add siteAI models

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -67,6 +67,13 @@ mtk_model_face_dress_fp16.tflite
 mtk_AADB_HADB_MBV2_model_f16.tflite
 mtk_AADB_HADB_MBV3_model_f16.tflite
 mtk_model_emotions_0725_fp16.tflite
+mtk_face_features_v1_fp16.tflite
+siteAI_digcom_AI_ECN.tflite
+siteAI_digcom_g2v_keras.tflite
+siteAI_trans_nonlinear.tflite
+siteAI_trans_tcpclassify.tflite
+siteAI_wireless_depress_w.tflite
+siteAI_wireless_restore_w.tflite
 magenta_arbitrary-image-stylization-v1-256_fp16_prediction_1.tflite
 ml_object_detect.tflite
 hiai_cpu_face_emotion.tflite
