Add Convertor function for windows enviroment

--- a/mindspore/lite/CMakeLists.txt
+++ b/mindspore/lite/CMakeLists.txt
@@ -26,8 +26,8 @@ if (PLATFORM_ARM64)
 elseif (PLATFORM_ARM32)
     set(COMPONENT_NAME runtime-arm32-${PROCESS_UNIT})
 elseif (WIN32)
-    set(PARSER_NAME libconverter-parser-win32-${PROCESS_UNIT})
-    set(COMPONENT_NAME converter-win32-${PROCESS_UNIT})
+    set(PARSER_NAME libconverter-parser-win-${PROCESS_UNIT})
+    set(COMPONENT_NAME converter-win-${PROCESS_UNIT})
 else ()
     set(COMPONENT_NAME convert-ubuntu)
 endif()
