--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -16,8 +16,8 @@ tracking
 mtk_isface
 mtk_landmark
 mtk_pose_tuku
-# mtk_face_recognition_v1
-# mtk_2012_ATLANTA_10class_20190614_v41
+mtk_face_recognition_v1
+mtk_2012_ATLANTA_10class_20190614_v41
 mtk_detect-deeper-halfdeeper-mbv1-lastearlySSD-shortcut-400-400_nopostprocess_simplified
 detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified
 hiai_face_detect_rfb
@@ -37,7 +37,7 @@ ml_hardware_pose
 ml_bank_recog
 2012_ATLANTA_10class_20190131_v4.0
 mnet
-# recognition
+recognition
 ml_face_landmark
 model_hebing_3branch
 hiai_cv_focusShootOCRModel_07
@@ -48,9 +48,9 @@ hiai_cv_focusShootOCRModel_04
 hiai_cv_focusShootOCRModel_06
 hiai_cpu_face_hat
 hiai_video_seg
-# hiai_semantic_seg
+hiai_semantic_seg
 hiai_human_seg
-# hiai_face_recognition_1
+hiai_face_recognition_1
 hiai_cpu_face_detect
 hiai_cpu_face_attr
 hiai_face_attr1
