add opencl kernels to libmindspore-lite

--- a/mindspore/lite/src/CMakeLists.txt
+++ b/mindspore/lite/src/CMakeLists.txt
@@ -36,11 +36,19 @@ file(GLOB_RECURSE C_OPS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/ops/*.cc)
 add_library(mindspore-lite SHARED ${LITE_SRC} ${C_OPS_SRC})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-private-field")
 add_library(anf OBJECT ${ANF_SRC})
-target_link_libraries(mindspore-lite
-    anf
-    cpu_kernel_mid_
-    )
-
+if (SUPPORT_GPU)
+  add_subdirectory(runtime/kernel/opencl)
+  target_link_libraries(mindspore-lite
+      anf
+      cpu_kernel_mid_
+      opencl_kernel_lib_
+      )
+else ()
+  target_link_libraries(mindspore-lite
+      anf
+      cpu_kernel_mid_
+      )
+endif ()
 add_subdirectory(runtime/kernel/arm)
 if (PLATFORM_ARM32 OR PLATFORM_ARM64)
   target_link_libraries(mindspore-lite log)
