--- a/mindspore/lite/src/runtime/kernel/opencl/CMakeLists.txt
+++ b/mindspore/lite/src/runtime/kernel/opencl/CMakeLists.txt
@@ -1,16 +1,2 @@
-set(OPENCL_KERNEL_SRC
-    ${CMAKE_CURRENT_SOURCE_DIR}/subgraph_opencl_kernel.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/utils.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/arithmetic.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/convolution.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/depthwise_conv2d.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/pooling2d.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/matmul.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/softmax.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/concat.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/conv2d_transpose.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/transpose.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/reshape.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/activation.cc
-    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/caffe_prelu.cc
-    )
+file(GLOB_RECURSE OPENCL_KERNEL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/kernel/*.cc)
+add_library(opencl_kernel_lib_ OBJECT ${KERNEL_SRC} ${OPENCL_KERNEL_SRC})
