--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -17,7 +17,7 @@ mtk_isface
 mtk_landmark
 mtk_pose_tuku
 # mtk_face_recognition_v1
-mtk_2012_ATLANTA_10class_20190614_v41
+# mtk_2012_ATLANTA_10class_20190614_v41
 mtk_detect-deeper-halfdeeper-mbv1-lastearlySSD-shortcut-400-400_nopostprocess_simplified
 detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified
 hiai_face_detect_rfb
@@ -48,7 +48,7 @@ hiai_cv_focusShootOCRModel_04
 hiai_cv_focusShootOCRModel_06
 hiai_cpu_face_hat
 hiai_video_seg
-hiai_semantic_seg
+# hiai_semantic_seg
 hiai_human_seg
 # hiai_face_recognition_1
 hiai_cpu_face_detect
