--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -93,4 +93,6 @@ hiai_ghostnet.tflite
 hiai_iMaxDN_RGB.tflite
 hiai_iMaxSR_RGB.tflite
 hiai_label_and_video.tflite
+mobilenet_v1_1.0_224_quant.tflite
+mobilenet_v2_1.0_224_quant.tflite
 hiai_lm_inference_graph.tflite
