add aware quant testcase

--- a/mindspore/lite/test/models_tflite_awaretraining.cfg
+++ b/mindspore/lite/test/models_tflite_awaretraining.cfg
@@ -1,3 +1,5 @@
 video_infer.tflite
 mobilenet_v1_1.0_224_quant.tflite
 mobilenet_v2_1.0_224_quant.tflite
+hiai_graph_8bit_combined.tflite
+graph_8bit_1021_combine.tflite
