update the copy rules for fp16 models

--- a/mindspore/lite/test/models_fp16.cfg
+++ b/mindspore/lite/test/models_fp16.cfg
@@ -1,7 +1,7 @@
 detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified.fp16
-model_emotions_0727_nosoftmax.fp16
+model_emotions_0727_nosoftmax.tflite.fp16
 mtk_isface.fp16
 mtk_landmark.fp16
 mtk_pose_tuku.fp16
-mtk_age_gender.fp16
-mtk_model_face_dress.fp16
+mtk_age_gender.tflite.fp16
+mtk_model_face_dress.tflite.fp16
