--- a/mindspore/ccsrc/backend/session/CMakeLists.txt
+++ b/mindspore/ccsrc/backend/session/CMakeLists.txt
@@ -3,6 +3,8 @@ file(GLOB_RECURSE _SESSION_SRC_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     "kernel_graph.cc"
     "session_basic.cc"
     "session_factory.cc"
+    "executor.cc"
+    "executor_manager.cc"
     "anf_runtime_algorithm.cc"
 )
 
