--- a/mindspore/lite/java/java/app/build.gradle
+++ b/mindspore/lite/java/java/app/build.gradle
@@ -18,6 +18,7 @@ android {
         }
         ndk {
             abiFilters 'arm64-v8a'
+            abiFilters 'armeabi-v7a'
         }
     }
 
@@ -36,6 +37,9 @@ android {
         variant->variant.outputs.all {
             outputFileName = "mindspore-lite.aar"
         }
+    }
+    aaptOptions {
+        noCompress = ['.so']
     }
 }
 
