--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -76,6 +76,7 @@ siteAI_wireless_depress_w.tflite
 siteAI_wireless_restore_w.tflite
 magenta_arbitrary-image-stylization-v1-256_fp16_prediction_1.tflite
 ml_object_detect.tflite
+ml_object_detect_1.tflite
 hiai_cpu_face_emotion.tflite
 hiai_cpu_face_gazing.tflite
 hiai_cpu_face_headpose.tflite
