--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -51,16 +51,16 @@ scan_hms_detect.tflite
 hiai_latin_ocr.tflite
 hiai_latin_ocr_1.tflite
 ml_ocr_jk.tflite
-#nasnet_mobile.tflite
-#nasnet_large.tflite
+nasnet_mobile.tflite
+nasnet_large.tflite
 model_emotions_0727_nosoftmax.tflite
-#inception_resnet_v2.tflite
+inception_resnet_v2.tflite
 ml_ocr_latin.tflite
 hiai_PoseEstimation_Pcm.tflite
 hiai_ssd_mobilenetv2_object.tflite
 hiai_cv_focusShootOCRModel_02.tflite
 hiai_cv_poseEstimation.tflite
-#inception_v4.tflite
+inception_v4.tflite
 mtk_model_normalize_object_scene_ps_20200519_f16.tflite
 mtk_age_gender_fp16.tflite
 mtk_model_face_dress_fp16.tflite
