--- a/mindspore/lite/test/models_tflite_awaretraining.cfg
+++ b/mindspore/lite/test/models_tflite_awaretraining.cfg
@@ -4,5 +4,5 @@ mobilenet_v2_1.0_224_quant.tflite
 hiai_graph_8bit_combined.tflite
 inception_v1_224_quant.tflite
 inception_v3_quant.tflite
-#inception_v4_299_quant.tflite
+inception_v4_299_quant.tflite
 graph_8bit_1021_combine.tflite
