--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -89,6 +89,7 @@ hiai_cv_labelDetectorModel_v2.tflite
 #hiai_cv_labelDetectorModel_v3.tflite
 hiai_cv_labelDetectorModel_v4.tflite
 hiai_dress_detect.tflite
+hiai_cv_saliencyDetectorModel.tflite
 hiai_frozen_inference_graph.tflite
 hiai_ghostnet.tflite
 hiai_iMaxDN_RGB.tflite
